--- a/pages/home.html
+++ b/pages/home.html
@@ -51,7 +51,7 @@
                 <p class="page-text1">Alarm</p>
               </div>
               <div class="page-main">
-                <a href="#" class="link"
+                <a href="../index.html" class="link"
                   ><i class="fa-regular fa-clock icon"></i
                 ></a>
                 <p class="page-text1">Clock</p>
